--- a/index.html
+++ b/index.html
@@ -770,7 +770,9 @@
     <!-- end  static header resposnive -->
 
     <main>
-      <button class="btn-secondary scroll-top-btn" id="scroll-top">
+      <button
+        class="btn-secondary scroll-top-btn"
+        id="scroll-top">
         <i class="fa-solid fa-angle-up"></i>
       </button>
       <!-- start hero video -->
@@ -795,7 +797,9 @@
       <!-- end hero video -->
 
       <!-- end about us -->
-      <section class="about" id="about-coral">
+      <section
+        class="about"
+        id="about-coral">
         <div class="container">
           <div class="row about__row">
             <div class="col-12 col-lg-8">
@@ -832,6 +836,32 @@
         </div>
       </section>
       <!-- end about us -->
+
+      <!-- start our partener -->
+      <section class="our-partener">
+        <div class="our-partener__media">
+          <img
+            src="./assets/img/static/about-media.webp"
+            alt="" />
+          <div class="our-partener__text">
+            <h2 class="our-partener__title">OUR PARTENERS</h2>
+            <p class="our-partener__desc">
+              “At SHAMS, we believe in fostering a unified approach that aligns
+              with the goals and visions of diverse stakeholders, from local
+              communities and non-profit sectors to governmental and
+              international bodies”
+            </p>
+            <div class="our-partener__action">
+              <a
+                href="#"
+                class="btn-secondary"
+                >LEARN MORE</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end our partener -->
     </main>
 
     <footer class="footer">
