--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
     <title>شمس</title>
-    <link
+    <!-- <link
       rel="stylesheet"
-      href="assets/css/bootstrap.rtl.min.css" />
+      href="assets/css/bootstrap.rtl.min.css" /> -->
     <link
       rel="stylesheet"
       href="assets/css/bootstrap.min.css" />
@@ -862,6 +862,232 @@
         </div>
       </section>
       <!-- end our partener -->
+      <!-- start latest news -->
+      <section class="news">
+        <div class="container">
+          <div class="news__heading">
+            <div class="news__title">
+              <h2>LATEST NEWS</h2>
+            </div>
+            <a
+              class="news__link-all"
+              href="#">
+              <span>SEE ALL</span>
+              <span>
+                <i class="fa-solid fa-arrow-right arrow-icon"></i>
+              </span>
+            </a>
+          </div>
+          <div class="news__content">
+            <div class="news__content-row">
+              <div class="row">
+                <div class="col-4">
+                  <div class="news__card">
+                    <div class="news__media">
+                      <img
+                        src="./assets/img/static/news-media.webp"
+                        alt="news image" />
+                    </div>
+                    <div class="news__text">
+                      <p class="news__card-desc">
+                        The General Organization for Conservation of Coral Reefs
+                        and Turtles in the Red Sea and Jazan University signed a
+                        Memorandum to boost cooperation in research, training, and
+                        knowledge exchange. The collaboration aims to enhance
+                        expertise and experience in coral reef and turtle
+                        conservation in the Red Sea.
+                      </p>
+  
+                      <a
+                        href="#"
+                        class="news__card-link">
+                        <span>READ MORE</span>
+                        <span>
+                          <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="news__card">
+                    <div class="news__media">
+                      <img
+                        src="./assets/img/static/news-media.webp"
+                        alt="news image" />
+                    </div>
+                    <div class="news__text">
+                      <p class="news__card-desc">
+                        The General Organization for Conservation of Coral Reefs
+                        and Turtles in the Red Sea and Jazan University signed a
+                        Memorandum to boost cooperation in research, training, and
+                        knowledge exchange. The collaboration aims to enhance
+                        expertise and experience in coral reef and turtle
+                        conservation in the Red Sea.
+                      </p>
+  
+                      <a
+                        href="#"
+                        class="news__card-link">
+                        <span>READ MORE</span>
+                        <span>
+                          <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="news__card">
+                    <div class="news__media">
+                      <img
+                        src="./assets/img/static/news-media.webp"
+                        alt="news image" />
+                    </div>
+                    <div class="news__text">
+                      <p class="news__card-desc">
+                        The General Organization for Conservation of Coral Reefs
+                        and Turtles in the Red Sea and Jazan University signed a
+                        Memorandum to boost cooperation in research, training, and
+                        knowledge exchange. The collaboration aims to enhance
+                        expertise and experience in coral reef and turtle
+                        conservation in the Red Sea.
+                      </p>
+  
+                      <a
+                        href="#"
+                        class="news__card-link">
+                        <span>READ MORE</span>
+                        <span>
+                          <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="news__slide">
+              <div
+                id="carouselNewsIndicators"
+                class="carousel slide">
+                <div class="carousel-indicators">
+                  <button
+                    type="button"
+                    data-bs-target="#carouselNewsIndicators"
+                    data-bs-slide-to="0"
+                    class="active carousel-indicator"
+                    aria-current="true"
+                    aria-label="Slide 1"></button>
+                  <button
+                    type="button"
+                    data-bs-target="#carouselNewsIndicators"
+                    class="carousel-indicator"
+                    data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                  <button
+                    type="button"
+                    data-bs-target="#carouselNewsIndicators"
+                    class="carousel-indicator"
+                    data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                                    <div class="news__card">
+                    <div class="news__media">
+                      <img
+                        src="./assets/img/static/news-media.webp"
+                        alt="news image" />
+                    </div>
+                    <div class="news__text">
+                      <p class="news__card-desc">
+                        The General Organization for Conservation of Coral Reefs
+                        and Turtles in the Red Sea and Jazan University signed a
+                        Memorandum to boost cooperation in research, training, and
+                        knowledge exchange. The collaboration aims to enhance
+                        expertise and experience in coral reef and turtle
+                        conservation in the Red Sea.
+                      </p>
+  
+                      <a
+                        href="#"
+                        class="news__card-link">
+                        <span>READ MORE</span>
+                        <span>
+                          <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+  
+                  </div>
+                  <div class="carousel-item">
+                                    <div class="news__card">
+                    <div class="news__media">
+                      <img
+                        src="./assets/img/static/news-media.webp"
+                        alt="news image" />
+                    </div>
+                    <div class="news__text">
+                      <p class="news__card-desc">
+                        The General Organization for Conservation of Coral Reefs
+                        and Turtles in the Red Sea and Jazan University signed a
+                        Memorandum to boost cooperation in research, training, and
+                        knowledge exchange. The collaboration aims to enhance
+                        expertise and experience in coral reef and turtle
+                        conservation in the Red Sea.
+                      </p>
+  
+                      <a
+                        href="#"
+                        class="news__card-link">
+                        <span>READ MORE</span>
+                        <span>
+                          <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+  
+                  </div>
+                  <div class="carousel-item">
+                                    <div class="news__card">
+                    <div class="news__media">
+                      <img
+                        src="./assets/img/static/news-media.webp"
+                        alt="news image" />
+                    </div>
+                    <div class="news__text">
+                      <p class="news__card-desc">
+                        The General Organization for Conservation of Coral Reefs
+                        and Turtles in the Red Sea and Jazan University signed a
+                        Memorandum to boost cooperation in research, training, and
+                        knowledge exchange. The collaboration aims to enhance
+                        expertise and experience in coral reef and turtle
+                        conservation in the Red Sea.
+                      </p>
+  
+                      <a
+                        href="#"
+                        class="news__card-link">
+                        <span>READ MORE</span>
+                        <span>
+                          <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+  
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end latest news -->
     </main>
 
     <footer class="footer">
