--- a/index.html
+++ b/index.html
@@ -892,12 +892,12 @@
                       <p class="news__card-desc">
                         The General Organization for Conservation of Coral Reefs
                         and Turtles in the Red Sea and Jazan University signed a
-                        Memorandum to boost cooperation in research, training, and
-                        knowledge exchange. The collaboration aims to enhance
-                        expertise and experience in coral reef and turtle
-                        conservation in the Red Sea.
+                        Memorandum to boost cooperation in research, training,
+                        and knowledge exchange. The collaboration aims to
+                        enhance expertise and experience in coral reef and
+                        turtle conservation in the Red Sea.
                       </p>
-  
+
                       <a
                         href="#"
                         class="news__card-link">
@@ -920,12 +920,12 @@
                       <p class="news__card-desc">
                         The General Organization for Conservation of Coral Reefs
                         and Turtles in the Red Sea and Jazan University signed a
-                        Memorandum to boost cooperation in research, training, and
-                        knowledge exchange. The collaboration aims to enhance
-                        expertise and experience in coral reef and turtle
-                        conservation in the Red Sea.
+                        Memorandum to boost cooperation in research, training,
+                        and knowledge exchange. The collaboration aims to
+                        enhance expertise and experience in coral reef and
+                        turtle conservation in the Red Sea.
                       </p>
-  
+
                       <a
                         href="#"
                         class="news__card-link">
@@ -948,12 +948,12 @@
                       <p class="news__card-desc">
                         The General Organization for Conservation of Coral Reefs
                         and Turtles in the Red Sea and Jazan University signed a
-                        Memorandum to boost cooperation in research, training, and
-                        knowledge exchange. The collaboration aims to enhance
-                        expertise and experience in coral reef and turtle
-                        conservation in the Red Sea.
+                        Memorandum to boost cooperation in research, training,
+                        and knowledge exchange. The collaboration aims to
+                        enhance expertise and experience in coral reef and
+                        turtle conservation in the Red Sea.
                       </p>
-  
+
                       <a
                         href="#"
                         class="news__card-link">
@@ -995,91 +995,88 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                                    <div class="news__card">
-                    <div class="news__media">
-                      <img
-                        src="./assets/img/static/news-media.webp"
-                        alt="news image" />
+                    <div class="news__card">
+                      <div class="news__media">
+                        <img
+                          src="./assets/img/static/news-media.webp"
+                          alt="news image" />
+                      </div>
+                      <div class="news__text">
+                        <p class="news__card-desc">
+                          The General Organization for Conservation of Coral
+                          Reefs and Turtles in the Red Sea and Jazan University
+                          signed a Memorandum to boost cooperation in research,
+                          training, and knowledge exchange. The collaboration
+                          aims to enhance expertise and experience in coral reef
+                          and turtle conservation in the Red Sea.
+                        </p>
+
+                        <a
+                          href="#"
+                          class="news__card-link">
+                          <span>READ MORE</span>
+                          <span>
+                            <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                          </span>
+                        </a>
+                      </div>
                     </div>
-                    <div class="news__text">
-                      <p class="news__card-desc">
-                        The General Organization for Conservation of Coral Reefs
-                        and Turtles in the Red Sea and Jazan University signed a
-                        Memorandum to boost cooperation in research, training, and
-                        knowledge exchange. The collaboration aims to enhance
-                        expertise and experience in coral reef and turtle
-                        conservation in the Red Sea.
-                      </p>
-  
-                      <a
-                        href="#"
-                        class="news__card-link">
-                        <span>READ MORE</span>
-                        <span>
-                          <i class="fa-solid fa-arrow-right arrow-icon"></i>
-                        </span>
-                      </a>
-                    </div>
-                  </div>
-  
                   </div>
                   <div class="carousel-item">
-                                    <div class="news__card">
-                    <div class="news__media">
-                      <img
-                        src="./assets/img/static/news-media.webp"
-                        alt="news image" />
+                    <div class="news__card">
+                      <div class="news__media">
+                        <img
+                          src="./assets/img/static/news-media.webp"
+                          alt="news image" />
+                      </div>
+                      <div class="news__text">
+                        <p class="news__card-desc">
+                          The General Organization for Conservation of Coral
+                          Reefs and Turtles in the Red Sea and Jazan University
+                          signed a Memorandum to boost cooperation in research,
+                          training, and knowledge exchange. The collaboration
+                          aims to enhance expertise and experience in coral reef
+                          and turtle conservation in the Red Sea.
+                        </p>
+
+                        <a
+                          href="#"
+                          class="news__card-link">
+                          <span>READ MORE</span>
+                          <span>
+                            <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                          </span>
+                        </a>
+                      </div>
                     </div>
-                    <div class="news__text">
-                      <p class="news__card-desc">
-                        The General Organization for Conservation of Coral Reefs
-                        and Turtles in the Red Sea and Jazan University signed a
-                        Memorandum to boost cooperation in research, training, and
-                        knowledge exchange. The collaboration aims to enhance
-                        expertise and experience in coral reef and turtle
-                        conservation in the Red Sea.
-                      </p>
-  
-                      <a
-                        href="#"
-                        class="news__card-link">
-                        <span>READ MORE</span>
-                        <span>
-                          <i class="fa-solid fa-arrow-right arrow-icon"></i>
-                        </span>
-                      </a>
-                    </div>
-                  </div>
-  
                   </div>
                   <div class="carousel-item">
-                                    <div class="news__card">
-                    <div class="news__media">
-                      <img
-                        src="./assets/img/static/news-media.webp"
-                        alt="news image" />
+                    <div class="news__card">
+                      <div class="news__media">
+                        <img
+                          src="./assets/img/static/news-media.webp"
+                          alt="news image" />
+                      </div>
+                      <div class="news__text">
+                        <p class="news__card-desc">
+                          The General Organization for Conservation of Coral
+                          Reefs and Turtles in the Red Sea and Jazan University
+                          signed a Memorandum to boost cooperation in research,
+                          training, and knowledge exchange. The collaboration
+                          aims to enhance expertise and experience in coral reef
+                          and turtle conservation in the Red Sea.
+                        </p>
+
+                        <a
+                          href="#"
+                          class="news__card-link">
+                          <span>READ MORE</span>
+                          <span>
+                            <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                          </span>
+                        </a>
+                      </div>
                     </div>
-                    <div class="news__text">
-                      <p class="news__card-desc">
-                        The General Organization for Conservation of Coral Reefs
-                        and Turtles in the Red Sea and Jazan University signed a
-                        Memorandum to boost cooperation in research, training, and
-                        knowledge exchange. The collaboration aims to enhance
-                        expertise and experience in coral reef and turtle
-                        conservation in the Red Sea.
-                      </p>
-  
-                      <a
-                        href="#"
-                        class="news__card-link">
-                        <span>READ MORE</span>
-                        <span>
-                          <i class="fa-solid fa-arrow-right arrow-icon"></i>
-                        </span>
-                      </a>
-                    </div>
-                  </div>
-  
                   </div>
                 </div>
               </div>
@@ -1088,6 +1085,79 @@
         </div>
       </section>
       <!-- end latest news -->
+      <!-- start contact -->
+      <section class="contact-info">
+        <div class="container">
+          <div class="contact-info__title">
+            <h2>CONTACT INFORMATION</h2>
+          </div>
+          <div class="contact-info__desc">
+            <p>
+              At SHAMS we are happy to connect with you. Feel free to reach out
+              to us anytime from Sunday through Thursday. Kindly be aware that
+              our response time may vary, with a maximum turnaround of up to 10
+              business days.
+            </p>
+          </div>
+          <div class="contact-info__action-wrapper">
+            <div class="contact-info__action">
+              <a
+                href="#"
+                class="contact-info__box">
+                <div class="box__content">
+                  <div class="box__icon">
+                    <svg class="envlope"
+                      width="93"
+                      height="92"
+                      viewBox="0 0 93 92"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <g id="Envolpe">
+                        <path
+                          id="Union"
+                          fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M14.4727 22.4443H74.6208C75.7254 22.4443 76.6208 23.3398 76.6208 24.4443V67.5555C76.6208 68.66 75.7254 69.5555 74.6208 69.5555H14.4727C13.3681 69.5555 12.4727 68.66 12.4727 67.5555V24.4443C12.4727 23.3398 13.3681 22.4443 14.4727 22.4443ZM10.4727 24.4443C10.4727 22.2352 12.2635 20.4443 14.4727 20.4443H74.6208C76.8299 20.4443 78.6208 22.2352 78.6208 24.4443V67.5555C78.6208 69.7646 76.8299 71.5555 74.6208 71.5555H14.4727C12.2635 71.5555 10.4727 69.7646 10.4727 67.5555V24.4443ZM22.9227 33.2223C22.4523 32.9329 21.8364 33.0795 21.5469 33.5499C21.2575 34.0202 21.4041 34.6362 21.8745 34.9256L42.9313 47.8836C43.929 48.4976 45.1929 48.4747 46.1677 47.8248L65.5459 34.906C66.0054 34.5997 66.1296 33.9788 65.8232 33.5193C65.5169 33.0597 64.896 32.9356 64.4365 33.2419L45.0583 46.1607C44.7333 46.3773 44.312 46.385 43.9795 46.1803L22.9227 33.2223Z" />
+                      </g>
+                    </svg>
+                  </div>
+                  <span>info_shams@shams.go</span>
+                </div>
+              </a>
+              <a
+                href="#"
+                class="contact-info__box">
+                <div class="box__content">
+                  <div class="box__icon">
+                    <svg
+                      width="93"
+                      height="92"
+                      viewBox="0 0 93 92"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <g id="mappin">
+                        <path
+                          id="Ellipse 44"
+                          d="M33.8701 68.08C30.1901 68.6934 22.8301 70.656 22.8301 73.6C22.8301 77.28 37.5501 79.12 44.9101 79.12C52.2701 79.12 66.9901 77.28 66.9901 73.6C66.9901 70.656 59.6301 68.6934 55.9501 68.08M55.9501 31.28C55.9501 37.3773 51.0073 42.32 44.9101 42.32C38.8129 42.32 33.8701 37.3773 33.8701 31.28C33.8701 25.1828 38.8129 20.24 44.9101 20.24C51.0073 20.24 55.9501 25.1828 55.9501 31.28ZM44.9101 73.6C54.1101 60.72 66.9901 46 66.9901 31.28C66.9901 14.72 52.2701 11.04 44.9101 11.04C37.5501 11.04 24.6701 16.56 24.6701 31.28C24.6701 44.528 37.5501 62.56 44.9101 73.6Z"
+                          stroke-width="2"
+                          stroke-linecap="round" />
+                      </g>
+                    </svg>
+                  </div>
+                  <span class="box__text"
+                    >Jeddah, Al Worood District, Prince Majed Street, P.O. Box:
+                    1358, Jeddah 21431, Kingdom of Saudi Arabia)</span
+                  >
+                  <span class="box__arrow">
+                    <i class="fa-solid fa-arrow-right arrow-icon"></i>
+                  </span>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end contact -->
     </main>
 
     <footer class="footer">
